--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "errorhandler": "^1.5.0",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "pusher": "^2.0.0"
   }
 }
