--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "body-parser": "^1.18.3",
     "errorhandler": "^1.5.0",
     "express": "^4.16.3",
-    "pusher": "^2.0.0"
+    "pusher": "^2.0.0",
+    "reliable-signaler": "^1.0.2",
+    "socket.io": "^2.1.1"
   }
 }
